--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#1C161E</color>
+    <color name="secondary">#EFE3C8</color>
+    <color name="white">#FFFFFF</color>
+    <color name="accent">#414141</color>
+
+    <color name="text">#FAF3DD</color>
 </resources>
