--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.493" />
 
     <TextView
-        android:id="@+id/et_name"
+        android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
