--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -52,7 +52,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/img_cover"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -128,14 +128,14 @@
         android:gravity="center">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_bookmark"
+            android:id="@+id/btn_wishlist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginEnd="55dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/button"
-            android:text="Bookmark"
+            android:text="Wishlist"
             android:textSize="16sp"
             android:fontFamily="@font/body"
             android:textColor="@color/primary" />
