--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/btn_back"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:background="@drawable/ic_back"
+                android:background="@drawable/ic_back2"
                 android:contentDescription="@string/back_button"
                 android:textAllCaps="false" />
 
