--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -53,11 +53,13 @@
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="250dp"
+                android:layout_height="300dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="24dp"
-                android:src="@drawable/img_buku1" />
+                android:layout_marginHorizontal="24dp"
+                android:src="@drawable/img_buku1"
+                android:scaleType="fitCenter"/>
 
             <TextView
                 android:id="@+id/title"
