--- a/app/src/main/res/layout/activity_checkout_status.xml
+++ b/app/src/main/res/layout/activity_checkout_status.xml
@@ -72,7 +72,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="60dp"
-
+                android:src="@drawable/ic_success"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
